--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,21 +11,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
     "T_KEYWORDS_INIT= \"<keyword init>\"\n",
-    "T_OP= \"<op %s>\"\n",
+    "T_OPLOGICO= \"<opLogic %s>\"\n",
+    "T_OPMAT= \"<opMat %s>\"\n",
     "T_INT = \"<int %s>\"\n",
     "T_STRING = \"<str %s>\"\n",
     "T_IDENTIF = \"<id %s>\"\n",
-    "T_COMMENT = \"<comentario %s>\""
+    "T_COMMENT = \"<comentario %s>\"\n",
+    "T_LPARENT = \"<LParent %s>\"\n",
+    "T_RPARENT = \"<RParent %s>\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +78,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def afd_lParent(t):\n",
+    "    return re.match(\"[(]\", token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def afd_rParent(t):\n",
+    "    return re.match('[)]', token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def afd_operatorMatematico(t):\n",
+    "    return re.match('[-+*/]', token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def afd_operatorLogico(t):\n",
+    "    return re.match('[==]||[!=]||[<]||[>]||[<=]||[>=]', token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,8 +136,17 @@
     "    elif afd_comentario(token):\n",
     "        return T_COMMENT % token\n",
     "    \n",
-    "    elif token in ['=','+']:\n",
-    "        return T_OP % token\n",
+    "    elif afd_lParent(token):\n",
+    "        return T_LPARENT % token\n",
+    "    \n",
+    "    elif afd_rParent(token):\n",
+    "        return T_RPARENT % token\n",
+    "    \n",
+    "    elif afd_operatorMatematico(token):\n",
+    "        return T_OPMAT % token\n",
+    "    \n",
+    "    elif afd_operatorLogico(token):\n",
+    "        return T_OPLOGICO % token\n",
     "    \n",
     "    elif afd_string(token):\n",
     "        return T_STRING % token\n",
@@ -98,42 +164,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NodeSemantica:\n",
+    "    def __init__(self, data):\n",
+    "        self.left = None\n",
+    "        self.right = None\n",
+    "        self.data = data\n",
+    "\n",
+    "    def insert(self, data):\n",
+    "        if self.data:\n",
+    "            if data < self.data:\n",
+    "                if self.left is None:\n",
+    "                    self.left = Node(data)\n",
+    "                else:\n",
+    "                    self.left.insert(data)\n",
+    "            elif data > self.data:\n",
+    "                if self.right is None:\n",
+    "                    self.right = Node(data)\n",
+    "                else:\n",
+    "                    self.right.insert(data)\n",
+    "        else:\n",
+    "            self.data = data\n",
+    "\n",
+    "    def PrintTree(self):\n",
+    "        if self.left:\n",
+    "            self.left.PrintTree()\n",
+    "        print( self.data),\n",
+    "        if self.right:\n",
+    "            self.right.PrintTree()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def arvoreSintatica(tokens):\n",
+    "    arvoreSemanticas = []\n",
+    "    iter_obj = iter(tokens)\n",
+    "    while True:\n",
+    "        try:\n",
+    "            element = next(iter_obj)\n",
+    "            arvoreSemanticas.append(NodeSemantica(element))\n",
+    "            \n",
+    "            element = next(iter_obj)\n",
+    "            arvoreSemanticas.append(NodeSemantica(element))\n",
+    "\n",
+    "        except StopIteration:\n",
+    "            break\n",
+    "\n",
+    "    return arvoreSemanticas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<keyword init>', '<id a>']\n",
-      "['<keyword init>', '<id b>']\n",
-      "['<keyword init>', '<id c>']\n",
-      "[]\n",
-      "['<id a>', '<op =>', '<int 5>']\n",
-      "['<id b>', '<op =>', '<int 3>']\n",
-      "['<id c>', '<op =>', '<comentario \"12\">']\n",
-      "[]\n",
-      "['<id result>', '<op =>', '<id a>', '<op +>', '<id b>']\n",
-      "[]\n",
-      "[None, '<id teste>']\n",
-      "[]\n",
-      "[None]\n",
-      "['<comentario \"\"\">', '<id teste>', '<comentario \"\"\">']\n"
+      "<keyword init>\n",
+      "None\n",
+      "<opLogic a>\n",
+      "None\n",
+      "<keyword init>\n",
+      "None\n",
+      "<opLogic b>\n",
+      "None\n",
+      "<keyword init>\n",
+      "None\n",
+      "<opLogic c>\n",
+      "None\n",
+      "<opLogic a>\n",
+      "None\n",
+      "<opLogic =>\n",
+      "None\n",
+      "<opLogic 5>\n",
+      "None\n",
+      "<opLogic b>\n",
+      "None\n",
+      "<opLogic =>\n",
+      "None\n",
+      "<opLogic 3>\n",
+      "None\n",
+      "<opLogic c>\n",
+      "None\n",
+      "<opLogic =>\n",
+      "None\n",
+      "<comentario \"12\">\n",
+      "None\n",
+      "<opLogic result>\n",
+      "None\n",
+      "<opLogic =>\n",
+      "None\n",
+      "<opLogic a>\n",
+      "None\n",
+      "<opMat +>\n",
+      "None\n",
+      "<opLogic b>\n",
+      "None\n",
+      "<opLogic $>\n",
+      "None\n",
+      "<opLogic teste>\n",
+      "None\n",
+      "<opMat //teste>\n",
+      "None\n",
+      "<comentario \"\"\">\n",
+      "None\n",
+      "<opLogic teste>\n",
+      "None\n",
+      "<comentario \"\"\">\n",
+      "None\n",
+      "<opLogic funcao>\n",
+      "None\n",
+      "<opLogic teste()>\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "arquivo = open('codigo.x','r')\n",
     "\n",
+    "tokens=[]\n",
     "for l in arquivo.readlines():\n",
     "    l=l.replace(\"\\n\",\"\")\n",
-    "    #print(l)\n",
     "    \n",
-    "    tokens=[]\n",
     "    for token in l.split():\n",
     "        tokens.append(afd_principal(token))\n",
-    "    \n",
-    "    print(tokens)"
+    "\n",
+    "\n",
+    "arvores = arvoreSintatica(tokens)\n",
+    "for arvore in arvores:\n",
+    "    print(arvore.PrintTree())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<keyword init>'"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens[0]"
    ]
   },
   {
